Fixes video overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -268,9 +268,11 @@
   height: 300px;
 }
 
-.videos {
+.embed-container {
   text-align: center;
-  padding-bottom: 50px;
+}
+
+
 }
 
 /* End Bio Page */
@@ -651,6 +653,26 @@ textarea {
     display: none;
   }
 
+  .embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    margin-bottom: 1em;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    text-align: center;
+  }
+
+  .embed-container iframe,
+  .embed-container object,
+  .embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
   .footer li {
     font-size: 1em;
     margin-right: 0px;
@@ -689,6 +711,26 @@ textarea {
   .dropdown-content {
     font-size: .6em;
     display: none;
+  }
+
+  .embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    margin-bottom: 1em;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    text-align: center;
+  }
+
+  .embed-container iframe,
+  .embed-container object,
+  .embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   .footer li {
